2003-06-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* rcparse.y (res_text_field): New res_id variable.
	(res_null_text): New static const struct res_id object,
	with empty unicode name field.
	(control): Pop parsing of optresidc up one level. Set
	res_text_field to $2 except for controls which do not accept
	a text field.  Set res_text_field to res_null_text for the
	special cases (viz. COMBOBOX, EDITTEXT, LISTBOX, SCROLLBAR).
	(control_params): Adjust to use res_text_field rather
	than optresidc.
	(COMBOBOX): Add comment about discrepency between documented
	vs. observed default style.
	* resrc.c (define_control): Make first param const.
	* windres.h (define_control): Adjust prototype.

2003-06-27  Nick Clifton  <nickc@redhat.com>

	* objcopy.c (copy_object): Replace call to
	bfd_create_gnu_debuglink_section with seperate calls to
	bfd_add_gnu_debuglink_section and
	bfd_fill_in_gnu_debuglink_section, seperated by a walk over the
	symbol tables.

2003-06-26  Roland McGrath  <roland@redhat.com>

	* readelf.c (loadaddr): Variable removed.
	(dynamic_info, version_info): Fix type long -> bfd_vma.
	(program_headers): New variable.
	(get_program_headers): New function, broken out of
	process_program_headers.
	(process_program_headers): Call it.  Don't set `loadaddr'.
	(slurp_ia64_unwind_table): Use get_program_headers.
	(process_corefile_note_segments):  Likewise.
	(offset_from_vma): New function.
	(process_relocs, process_dynamic_segment): Call that instead of
	subtracting `loadaddr'.
	(process_version_sections, process_symbol_table): Likewise.
	(process_mips_specific): Likewise.

2003-06-26  Nick Clifton  <nickc@redhat.com>

	* objcopy (enum strip_action): Add STRIP_NONDEBUG.
        (OPTION_ONLY_KEEP_DEBUG): New.
        (strip_options): Add --only-keep-debug.
        (copy_options): Likewise.
        (is_strip_section): Invert return value if STRIP_NONDEBUG is
        active.
        (copy_object): Do not copy private data when STRIP_NONDEBUG is